--- a/templates/watch.html
+++ b/templates/watch.html
@@ -10,19 +10,11 @@
     <title>Слежка за Хрумочкой</title>
 </head>
 <body>
-<div class="row">
-<div class="card" style="width: 50%;">
-    <img src="/api/cam/get/1" class="img-fluid">
-    <div class="card-body">
-        <h5 class="card-title">Прямой эфир без всего</h5>
-    </div>
-</div>
-<div class="card" style="width: 50%;">
+<div class="container col" align="center">
+    <p class="h1"><img src="static/seapig.png">Слежка за Хрумой<img src="static/seapig.png"></p>
     <img src="/api/cam/get/2" class="img-fluid">
-    <div class="card-body">
-        <h5 class="card-title">Нормальный прямой эфир</h5>
-    </div>
-</div></div>
+</div>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"></script>
 </body>
